syntax = "proto3";

package rproto;

service LeaderElection {
  rpc RequestVote (VoteRequest) returns (VoteResult) {}
  rpc AppendEntry (AppendEntryRequest) returns (AppendEntryResult) {}
}

message VoteRequest {
  uint64 term = 1;
  uint32 candidate_id = 2;
}

message VoteResult {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntryRequest {
  uint64 term = 1;
}

message AppendEntryResult {
  uint64 term = 1;
  bool success = 2;
}
